# Yaml-LFS-Build

./: .gitignore  LFS-r12.3-115-systemd.tar.zst  README.md  Zlfs-chroot.sh  blfs-sysd-r12.3-1314.tar.zst  ca-bundle.crt
0-temp-tools/: 0-creating-dirs-both.sh  1-create-files_sysv-and-systemd.sh  binutils-temp1-2.45.yaml  binutils-temp2-2.45.yaml  findutils-temp-4.10.0.yaml  gawk-temp-5.3.2.yaml  gcc-temp1-15.2.0.yaml  gcc-temp2-15.2.0.yaml  gettext-temp-0.26.yaml  glibc-temp1-2.42.yaml  glibc-test.sh  gzip-temp-1.14.yaml  libidn2-2.3.8.yaml  nano-8.6.yaml  ncurses-temp-6.5-20250809.yaml  openssl-3.5.2.yaml  python-temp-3.13.7.yaml  sed-temp-4.9.yaml  tar-temp-1.35.yaml  zz-cleanup.sh
1-base-system/: acl-2.3.2.yaml  binutils-2.45.yaml  bison-3.8.2.yaml  expect-5.45.4.yaml  gcc-15.2.0.yaml  gettext-0.26.yaml  glibc-2.42.yaml  glibc-configure.sh  iana-etc-20250807.yaml  libxcrypt-4.4.38.yaml  lz4-1.10.0.yaml  m4-1.4.20.yaml  pkgconf-2.5.1.yaml  psmisc-23.7.yaml  readline-8.3.yaml  sed-4.9.yaml  shadow-4.18.0.yaml  testsuite-gcc-15.2.0.sh  tzdata2025b.yaml  xz-5.8.1.yaml
2-base-system/: automake-1.18.1.yaml  bash-5.3.yaml  coreutils-9.7.yaml  dbus-1.16.2.yaml  gawk-5.3.2.yaml  gperf-3.3.yaml  grub-2.12.yaml  intltool-0.51.0.yaml  jinja2-3.1.6.yaml  (+19 more)
ybuild-source/: Makefile  base-config.yaml  build-functions.hpp  checksum.hpp  database.hpp  dir_diff.hpp  dir_exists.hpp  dir_scan.hpp  download.hpp  exec.hpp  execCapture.hpp  extractor.hpp  fs-functions.hpp  init.hpp  load-package.hpp  main.cpp  meson.build  pkg-install.sh  source-functions.hpp  time_manager.hpp  xmlout.hpp  yaml-in.hpp  ydatabase.yaml  yprint.hpp
(+171 files in other folders)
